fix: adjust paragraph font size for improved readability on smaller screens

--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -85,7 +85,7 @@ header {
     }
     p {
         text-align: left;
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     .header__cta {        
